# HoloScanner

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
CPP/: DepthProcessor.h  (+17 more)
PostProcess/: Box1Final.xyz  Box2Final.xyz  CMakeLists.txt  Final.xyz  finaldenoisedbox.xyz  finaldenoisedbox2.xyz  finaldenoisedboxdb.xyz  readme.md
PostProcess/all_xyz/20221214_172322/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221214_202427/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221214_202638/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221214_202657/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221214_202853/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221214_203010/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221214_204119/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221214_204338/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_131903/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_131943/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_132054/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_133516/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_134233/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_134531/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_134653/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_135603/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_135656/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_135713/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_135906/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_140357/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_140426/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_140601/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_141034/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_141758/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_142024/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_142050/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_142227/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_142509/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_142642/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_142903/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_142919/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_143311/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_143546/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_144313/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_144355/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_144417/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_144431/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_144509/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_144532/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_144557/: Final.xyz
PostProcess/all_xyz/20221219_144735/: AfterDBScan.xyz  Final.xyz
PostProcess/all_xyz/20221219_145624/: AfterDBScan.xyz  Final.xyz
PostProcess/src/: MeshProcessor.h  main.cpp  utils.cpp  utils.h
(+41 files in other folders)
